# menubar-fund

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
docs/specs/: 2026-07-22-menubar-fund-design.md
docs/superpowers/plans/: 2026-07-23-alert-threshold.md
docs/superpowers/specs/: 2026-07-23-alert-threshold-design.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: AddFund.tsx  DetailPanel.tsx  ErrorBoundary.tsx  FundRow.tsx  MockPanel.tsx  SettingsPanel.tsx
src/services/: alerts.e2e.test.ts  alerts.test.ts  alerts.ts  clock.ts  estimate.test.ts  fundApi.ts  holiday.ts  loop.test.ts  notification.ts  parse.test.ts  parse.ts
src/services/__fixtures__/: mini_pingzhongdata.ts
src/store/: fundStore.ts  persistence.ts
src/types/: fund.ts  holiday.ts  settings.ts
src/utils/: format.ts
